--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
         "test": "node ."
     },
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^24.0.1",
-        "@rollup/plugin-json": "^6.0.0",
+        "rollup-plugin-preserve-shebangs": "^0.2.0",
         "@rollup/plugin-node-resolve": "^15.0.1",
-        "@rollup/plugin-terser": "^0.4.0",
+        "@rollup/plugin-commonjs": "^24.0.1",
         "@rollup/plugin-typescript": "^11.0.0",
+        "@rollup/plugin-terser": "^0.4.0",
+        "@rollup/plugin-json": "^6.0.0",
         "@types/chalk-animation": "^1.6.1",
         "@types/inquirer": "^9.0.3",
         "@types/node": "^18.15.0",
-        "chalk": "^5.2.0",
         "chalk-animation": "^2.0.3",
+        "chalk": "^5.2.0",
+        "nanospinner": "^1.1.0",
         "inquirer": "^9.1.4",
-        "ora": "^6.1.2",
         "rollup": "^3.19.1",
-        "rollup-plugin-preserve-shebangs": "^0.2.0",
         "tslib": "^2.5.0",
         "typescript": "^4.9.5"
     }
