update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "create-pack",
+    "name": "create-npack",
     "version": "0.0.1",
     "description": "A snappy start for your next big thing.",
     "keywords": [
